--- a/WebApplication-homework-grupp1/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-homework-grupp1/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Lista">Lista</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/TaxableDays">TaxableDays</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/NonTaxableDays">NonTaxableDays</a>
+                        </li>
                     </ul>
                 </div>
             </div>
