återställde lisa och index till när de fungerade.

--- a/WebApplication-homework-grupp1/Pages/Index.cshtml
+++ b/WebApplication-homework-grupp1/Pages/Index.cshtml
@@ -1,7 +1,10 @@
 @page
-@model WebApplication_homework_grupp1.Pages.IndexModel
+@model IndexModel
 @{
-    ViewData["Title"] = "Vehicle Tax Data";
+    ViewData["Title"] = "Home page";
 }
 
-
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
