--- a/WebApplication-homework-grupp1/Pages/Lista.cshtml
+++ b/WebApplication-homework-grupp1/Pages/Lista.cshtml
@@ -1,12 +1,24 @@
 @page
 @model WebApplication_homework_grupp1.Pages.ListaModel
-@{
-    ViewData["Title"] = "Skattedagar";
-}
 
 <h1>Skattedagar</h1>
 
-
-
-
-
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Månad</th>
+            <th>Dag</th>
+            <th>Trängselskatt?</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Dates)
+        {
+            <tr>
+                <td>@item.Month</td>
+                <td>@item.Day</td>
+                <td>@item.TaxableDay</td>
+            </tr>
+        }
+    </tbody>
+</table>
