formattering på sidorna

--- a/WebApplication-homework-grupp1/Pages/TaxableDays.cshtml
+++ b/WebApplication-homework-grupp1/Pages/TaxableDays.cshtml
@@ -6,9 +6,9 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Date</th>
-            <th>Weekday</th>
-            <th>Taxable</th>
+            <th>Månad</th>
+            <th>Dag</th>
+            <th>Trängselskatt</th>
         </tr>
     </thead>
     <tbody>
