--- a/WebApplication-homework-grupp1/Pages/NonTaxableDays.cshtml
+++ b/WebApplication-homework-grupp1/Pages/NonTaxableDays.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
 @model NonTaxableDaysModel
 
-<h1>Taxable Days</h1>
+<h1>NonTaxable Days</h1>
 
 <table class="table">
     <thead>
         <tr>
-            <th>Date</th>
-            <th>Weekday</th>
-            <th>Taxable</th>
+            <th>Månad</th>
+            <th>Dag</th>
+            <th>Trängselskatt?</th>
         </tr>
     </thead>
     <tbody>
