la till en sida för att välja månad, och döpte om sidorna.

--- a/WebApplication-homework-grupp1/Pages/NonTaxableDays.cshtml
+++ b/WebApplication-homework-grupp1/Pages/NonTaxableDays.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model NonTaxableDaysModel
 
-<h1>NonTaxable Days</h1>
+<h1>Dagar Utan Trängselskatt</h1>
 
 <table class="table">
     <thead>
