--- a/WebApplication-homework-grupp1/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-homework-grupp1/Pages/Shared/_Layout.cshtml
@@ -30,10 +30,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Lista">Lista</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/TaxableDays">TaxableDays</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/TaxableDays">Dagar Med Trängselskatt</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/NonTaxableDays">NonTaxableDays</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/NonTaxableDays">Dagar Utan Trängselskatt</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ByMonth">Visa Månad</a>
                         </li>
                     </ul>
                 </div>
