ändrade texten på hemsidan och tog bort privacy sidan som kändes onödig.

--- a/WebApplication-homework-grupp1/Pages/Index.cshtml
+++ b/WebApplication-homework-grupp1/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Trängselskatt I Stockholm</h1>
+    <p>Här kan du se vilka datum det är trängselskatt i Stockholm.<br />
+        Du kan välja i flikarna i toppen av sidan</a>.</p>
 </div>
