tog bort privacy fliken också.

--- a/WebApplication-homework-grupp1/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-homework-grupp1/Pages/Shared/_Layout.cshtml
@@ -24,9 +24,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Lista">Lista</a>
                         </li>
                         <li class="nav-item">
@@ -51,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - WebApplication_homework_grupp1 - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2025 - WebApplication_homework_grupp1 
         </div>
     </footer>
 
